--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "seed": "node seed.js"
+    "seed": "node app_api/models/seed.js"
   },
   "dependencies": {
-    "axios": "^1.8.4",
+    "@angular/common": "^19.2.5",
+    "@angular/core": "^19.2.5",
+    "@angular/forms": "^19.2.5",
+    "@angular/platform-browser": "^19.2.5",
+    "@angular/router": "^19.2.5",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^7.1.2",
     "http-errors": "~1.6.3",
-    "mongoose": "^7.8.6"
+    "mongoose": "^7.6.3"
   }
 }
