--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@angular/platform-browser": "^19.2.5",
     "@angular/router": "^19.2.5",
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^7.1.2",
     "http-errors": "~1.6.3",
-    "mongoose": "^7.6.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   }
 }
